# realm

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt  realm_engine.h
engine/core/: app_context.c  app_context.h
engine/render/: render.c  render.h
engine/utils/: maths.h  types.h  utils.h
src/: CMakeLists.txt  app_context.c  app_context.h  main.c  maths.h  utils.h
